feat: 🎸 develping mybatis (bugs till there)